user-skel/repos/ace/manifests/namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: simplenode-staging
---
apiVersion: v1
kind: Namespace
metadata:
  name: simplenode-production
